Dockerize the frontend